<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    android:background="#C9003964"
    tools:context=".MainActivity">

<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/total_question"
    android:text="@string/total_question"
    android:textColor="@color/black"
    android:layout_centerHorizontal="true"
    android:textSize="30sp"/>
<TextView
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:id="@+id/question"
android:textStyle="bold"
android:text="@string/this_will_be_the_question"
android:textColor="@color/white"
android:textSize="25sp"
android:textAlignment="center"
android:layout_margin="20dp"
android:layout_above="@+id/choices_layout"/>

<LinearLayout
android:id="@+id/choices_layout"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:layout_centerInParent="true"
android:orientation="vertical">

<Button
    android:id="@+id/ans_A"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:backgroundTint="@color/white"
    android:text="@string/ans_A"
    android:textColor="@color/black"
    android:textStyle="bold"/>

<Button
    android:id="@+id/ans_B"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:backgroundTint="@color/white"
    android:text="@string/ans_b"
    android:textColor="@color/black"
    android:textStyle="bold"
    />

<Button
    android:id="@+id/ans_C"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:backgroundTint="@color/white"
    android:text="@string/ans_c"
    android:textColor="@color/black"
    android:textStyle="bold"/>

<Button
    android:id="@+id/ans_D"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:backgroundTint="@color/white"
    android:text="@string/ans_d"
    android:textColor="@color/black"
    android:textStyle="bold"/>


</LinearLayout>

<Button
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:id="@+id/submit_Btn"
android:text="@string/submit"
android:layout_below="@+id/choices_layout"
android:layout_marginTop="40dp"/>

</RelativeLayout>








